--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "micro",
-  "version": "1.0.0",
-  "description": "Quick settings for developing themes.",
-  "main": "Gruntfile.js",
+  "version": "1.3.0",
+  "description": "Micro - WordPress.org theme by Alex Dimitrov",
+  "main": "Gulpfile.js",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-sass": "^1.1.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0"
+	  "del": "^2.2.0",
+      "gulp": "^3.9.1",
+      "gulp-autoprefixer": "^3.1.0",
+      "gulp-concat": "^2.6.0",
+      "gulp-cssmin": "^0.1.7",
+      "gulp-imagemin": "^3.0.1",
+      "gulp-livereload": "^3.8.1",
+      "gulp-notify": "^2.2.0",
+      "gulp-rename": "^1.2.2",
+      "gulp-sass": "^2.3.1",
+      "gulp-uglify": "^2.0.0",
+      "moment": "^2.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
